--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
     <name>micros</name>
     <modules>
         <module>customer</module>
+        <module>fraud</module>
     </modules>
 
     <properties>
